resolved progress bar overflow with calc

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ video {
 /* Progress Bar */
 .progress-range {
   height: 8px;
-  width: 100%;
+  width: calc(100% - 30px);
   background: rgba(202, 202, 202, 0.5);
   margin: auto;
   border-radius: 10px;
@@ -97,7 +97,7 @@ video {
   left: 15px;
   top: 15px;
   cursor: pointer;
-  transition: height 0.1s  ease-in-out;
+  transition: height 0.1s ease-in-out;
 }
 
 .progress-range:hover {
@@ -106,7 +106,7 @@ video {
 
 .progress-bar {
   background: var(--primary-color);
-  width: 50%;
+  width: 20%;
   height: 100%;
   border-radius: 10px;
   transition: all 0.5s ease;
